# prefetch-bench-framework

./: .gitignore  CMakeLists.txt  run_perf.sh  setup_and_run.sh
include/data/: DataGenerator.hpp  SOSDDataLoader.hpp
include/structures/: SimpleBTree.hpp
include/structures/btree/: BTree.hpp  BTreeStatistics.hpp
include/utils/: PrefetchUtils.hpp  Statistics.hpp  Timer.hpp
src/: main.cpp
